new endpoint to get qr code svg by code,save timestamp in millis,

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ anyhow = "1.0.97"
 chrono = { version = "0.4.40", features = ["serde"] }
 dotenv = "0.15.0"
 env_logger = "0.11.7"
+futures-util = "0.3.31"
 image = "0.25.6"
 log = "0.4.27"
 mongodb = "3.2.3"
