--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,5 +18,6 @@ qrcode = "0.14.1"
 rand = "0.9.0"
 serde = "1.0.219"
 serde_json = "1.0.140"
+sha2 = "0.10.8"
 tokio = "1.44.1"
 validator = { version = "0.20.0", features = ["derive"] }
