--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,4 +20,5 @@ serde = "1.0.219"
 serde_json = "1.0.140"
 sha2 = "0.10.8"
 tokio = "1.44.1"
+uuid = "1.16.0"
 validator = { version = "0.20.0", features = ["derive"] }
