--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,11 +7,13 @@ edition = "2024"
 actix-cors = "0.7.1"
 actix-web = "4.10.2"
 anyhow = "1.0.97"
+bcrypt = "0.17.0"
 chrono = { version = "0.4.40", features = ["serde"] }
 dotenv = "0.15.0"
 env_logger = "0.11.7"
 futures-util = "0.3.31"
 image = "0.25.6"
+jsonwebtoken = "9.3.1"
 log = "0.4.27"
 mongodb = "3.2.3"
 nanoid = "0.4.0"
